--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.1'
 
 services:
   web:
-    image: meehashmi/mynote:latest
+    image: meehashmi/mytest:latest
     ports:
       - "8000:80"
